feat: Complete Phase 3 integration - annotation-based scanning now fully operational
- Integrate annotation scanner with main scanning logic in ScanTerraformProviderServices()
- Add parseAWSServiceFileWithAnnotations() to replace file-by-file parsing
- Implement convertAnnotationResultsToServiceRegistration() bridge function
- Add extractFactoryFunctionNameFromTerraformType() for smart name inference
- Create comprehensive integration tests (terraform_provider_index_integration_test.go)
- Validate all 5 annotation types: SDK Resources, SDK DataSources, Framework Resources, Framework DataSources, Ephemeral Resources
- Maintain full backward compatibility with existing ServiceRegistration structure
- Preserve parallel processing, progress tracking, and JSON output format
- All 45+ tests passing including new Phase 3 integration tests
- Update todo.md to reflect completion of Phase 3 integration

The annotation-based scanning system is now the primary scanning method and ready for production use! 🚀

--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -75,13 +75,17 @@ jobs:
       - name: Clean previous index files
         if: ${{ env.TAG_EXISTS != 'true' }}
         run: rm -rf ./index
-      
+
+      - name: Pre-warm cache
+        if: ${{ env.TAG_EXISTS != 'true' }}
+        run: cd tmp/terraform-provider-aws && go mod download
+
       - name: Generate index
         if: ${{ env.TAG_EXISTS != 'true' }}
         run: |
           cd ./tmp/terraform-provider-aws
           gophon -pkg=internal -base=github.com/hashicorp/terraform-provider-aws -dest=../../index
-          terraform-provider-aws-index -version=${{ env.VERSION }} -scan-path internal/services -package-path github.com/hashicorp/terraform-provider-aws -output ../../index
+          terraform-provider-aws-index -version=${{ env.VERSION }} -scan-path internal/service -package-path github.com/hashicorp/terraform-provider-aws -output ../../index
 
       - name: Commit and push index files
         if: ${{ env.TAG_EXISTS != 'true' }}
