--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -82,6 +82,9 @@ jobs:
 
       - name: Generate index
         if: ${{ env.TAG_EXISTS != 'true' }}
+        env:
+          ACTIONS_STEP_DEBUG: true
+          ACTIONS_RUNNER_DEBUG: true
         run: |
           cd ./tmp/terraform-provider-aws
           gophon -pkg=internal -base=github.com/hashicorp/terraform-provider-aws -dest=../../index
