--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -85,6 +85,7 @@ jobs:
         env:
           ACTIONS_STEP_DEBUG: true
           ACTIONS_RUNNER_DEBUG: true
+          GOPHON_CPU_LIMIT: "80"
         run: |
           cd ./tmp/terraform-provider-aws
           gophon -pkg=internal -base=github.com/hashicorp/terraform-provider-aws -dest=../../index
